# dedesktop-pet

./: .gitignore  .prettierignore  Makefile  README.md  eslint.config.js  index.html  package-lock.json  vite.config.ts
.github/workflows/: build.yml
apps/desktop-pet/: .prettierignore  README.md  package.json  tsconfig.json  vite.config.ts
apps/desktop-pet/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-pet/src-tauri/capabilities/: default.json
apps/desktop-pet/src-tauri/icons/: icon.icns
apps/desktop-pet/src-tauri/src/: commands.rs  lib.rs  main.rs  settings.rs  window_ops.rs
docs/: ARCHITECTURE.md  CODEX_IMAGE_WORKFLOW.md  MACOS_BUILD.md  MIGRATION_GUIDE.md  NEW_CODEX_ONBOARDING.md  NEW_CODEX_START_PROMPT.md  PET_FACTORY_12_MONTH_ROADMAP.md  PET_FACTORY_ARCHITECTURE_V2.md  PET_FACTORY_BACKLOG.md  PET_FACTORY_PRODUCT_VISION.md  PET_LIFECYCLE.md  PET_PRODUCTION_PIPELINE.md  PROJECT_STRUCTURE.md  QA_MATURITY_MODEL.md  THIRD_PET_ACCEPTANCE_PLAN.md  TOOL_RESPONSIBILITIES.md  WANGDULAN_VISUAL_LESSONS.md  WINDOWS_BUILD.md  WINDOWS_DELIVERY_PLAN.md
docs/adr/: 0001-single-main-project.md  0002-codex-cc-responsibility-boundary.md  0003-approved-only-build.md  0004-platform-independent-pet-package.md  0005-source-format-vs-dist-format.md  (+2 more)
niuniu/: pet.json
pet_factory/: __init__.py  __main__.py  cli.py  paths.py
schemas/: pet.schema.json
src/: animation-player.ts  main.ts  pet-config.test.ts  pet-config.ts  pet-state-machine.test.ts  pet-state-machine.ts  types.ts  window-controller.ts
src-tauri/: Cargo.toml  tauri.conf.json
tools/: pet-preview.html
(+47 files in other folders)
