[package]
name = "desktop-pet"
version = "0.2.1"
description = "A small independent cross-platform desktop pet"
authors = ["Desktop Pet contributors"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "desktop_pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-autostart = "2"
thiserror = "2"
